--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, h1, ul, input, button {
   /* Basic styling for the body */
   body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #cbcbf5;
     color: #333;
     display: flex;
     flex-direction: column;
